# cpp-data-processing-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp
benchmarks/: bench_engine.cpp
include/dpe/: aggregate.hpp  batch.hpp  concepts.hpp  dpe.hpp  execution.hpp  expression.hpp  fixed_string.hpp  schema.hpp  storage.hpp  table.hpp
include/dpe/detail/: aligned_allocator.hpp  group_map.hpp  mmap_region.hpp  thread_pool.hpp
src/: mmap_region.cpp  thread_pool.cpp
tests/: compile_fail_case.cmake  runtime_tests.cpp
tests/compile_fail/: duplicate_aggregate_alias.cpp  duplicate_projection_alias.cpp  duplicate_schema.cpp  invalid_expression.cpp  missing_pipeline_column.cpp  string_sum.cpp  unknown_column.cpp
